feat: 🚀 更新文档配置

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,27 @@
 {
-	"cSpell.words": ["DKMJ", "vitepress", "YMXN"]
+	"cSpell.words": [
+		"Alipay",
+		"Anglar",
+		"breakline",
+		"commitize",
+		"Commitlint",
+		"DKMJ",
+		"doclock",
+		"Geeker",
+		"Gitee",
+		"hevue",
+		"imgpreview",
+		"loglevel",
+		"nocheck",
+		"Parens",
+		"Pinia",
+		"Prefixs",
+		"singleline",
+		"styl",
+		"stylelint",
+		"stylelintrc",
+		"vitepress",
+		"Wechat",
+		"YMXN"
+	]
 }
