--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 	"license": "MIT",
 	"homepage": "https://github.com/HalseySpicy/Geeker-Admin-Docs",
 	"scripts": {
-		"docs:dev": "vitepress dev docs",
+		"docs:dev": "vitepress dev docs --host",
 		"docs:build": "vitepress build docs",
 		"docs:preview": "vitepress preview docs"
 	},
@@ -21,5 +21,8 @@
 		"vite": "^3.2.5",
 		"vitepress": "^1.0.0-alpha.30",
 		"vue": "^3.2.45"
+	},
+	"dependencies": {
+		"hevue-img-preview": "^6.0.1"
 	}
 }
