--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	},
 	"devDependencies": {
 		"@types/node": "^18.11.11",
+		"markdown-it-custom-attrs": "^1.0.2",
 		"sass": "^1.56.1",
 		"typescript": "^4.9.3",
 		"vite": "^3.2.5",
