feat: 🚀 完善介绍和快速上手

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,14 +5,18 @@
 		"breakline",
 		"commitize",
 		"Commitlint",
+		"dbaeumer",
 		"DKMJ",
 		"doclock",
+		"esbenp",
 		"fancybox",
 		"Geeker",
 		"Gitee",
 		"hevue",
+		"hollowtree",
 		"imgpreview",
 		"loglevel",
+		"mikestead",
 		"nocheck",
 		"Parens",
 		"Pinia",
@@ -20,7 +24,10 @@
 		"singleline",
 		"styl",
 		"stylelint",
+		"stylelintignore",
 		"stylelintrc",
+		"syler",
+		"Vetur",
 		"vitepress",
 		"Wechat",
 		"YMXN"
