--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,9 @@ lerna-debug.log*
 node_modules
 dist
 dist-ssr
-*.local
 stats.html
-
+*.local
+docs/.vitepress/cache
 
 # Editor directories and files
 .vscode/*
