--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "geeker-admin-docs",
-	"version": "1.0.0",
+	"version": "1.1.0",
 	"description": "Geeker-Admin 开源管理系统文档",
 	"author": {
 		"name": "HalseySpicy",
@@ -15,12 +15,12 @@
 		"docs:preview": "vitepress preview docs"
 	},
 	"devDependencies": {
-		"@types/node": "^18.11.11",
+		"@types/node": "^18.15.11",
 		"markdown-it-custom-attrs": "^1.0.2",
-		"sass": "^1.56.1",
-		"typescript": "^4.9.3",
-		"vite": "^3.2.5",
-		"vitepress": "^1.0.0-alpha.30",
-		"vue": "^3.2.45"
+		"sass": "^1.61.0",
+		"typescript": "^5.0.4",
+		"vite": "^4.2.1",
+		"vitepress": "1.0.0-alpha.65",
+		"vue": "^3.2.47"
 	}
 }
